rust_analytics/build_errors.txt
   Compiling rust_analytics v0.1.0 (C:\Users\user\medical\rust_analytics)
warning: unused import: `tonic::transport::Server`
  --> src\lib.rs:12:5
   |
12 | use tonic::transport::Server;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `crate::modules::analytics::performance::bkt::BKTParams`
 --> src\application\use_cases\performance\predict_performance_use_case.rs:5:5
  |
5 | use crate::modules::analytics::performance::bkt::BKTParams;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::modules::analytics::performance::bkt`
 --> src\application\use_cases\performance\predict_performance_use_case.rs:6:5
  |
6 | use crate::modules::analytics::performance::bkt;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::domain::models::Goal`
 --> src\application\use_cases\goals\update_goal_use_case.rs:6:5
  |
6 | use crate::domain::models::Goal;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `async_trait::async_trait`
 --> src\application\use_cases\course_progress\get_course_progress_use_case.rs:2:5
  |
2 | use async_trait::async_trait;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> src\domain\models\learning_path.rs:2:13
  |
2 | use serde::{Serialize, Deserialize};
  |             ^^^^^^^^^  ^^^^^^^^^^^

warning: unused import: `sqlx::Pool`
 --> src\domain\repositories\mod.rs:8:5
  |
8 | use sqlx::Pool;
  |     ^^^^^^^^^^

warning: unused import: `sqlx::Postgres`
 --> src\domain\repositories\mod.rs:9:5
  |
9 | use sqlx::Postgres;
  |     ^^^^^^^^^^^^^^

warning: unused import: `Row`
 --> src\infrastructure\database\repositories\skill_state_repository.rs:6:28
  |
6 | use sqlx::{Pool, Postgres, Row};
  |                            ^^^

warning: unused import: `rand::rng`
 --> src\modules\analytics\engagement\learning_patterns.rs:2:5
  |
2 | use rand::rng;
  |     ^^^^^^^^^

warning: use of deprecated function `rand::thread_rng`: Renamed to `rng`
  --> src\modules\analytics\engagement\learning_patterns.rs:47:25
   |
47 |     let mut rng = rand::thread_rng();
   |                         ^^^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0382]: borrow of moved value: `filtered_goals`
  --> src\application\use_cases\goals\get_goals_use_case.rs:69:26
   |
34 |         let filtered_goals = if let Some(status_str) = request.status {
   |             -------------- move occurs because `filtered_goals` has type `Vec<goal::Goal>`, which does not implement the `Copy` trait
...
67 |             goals: filtered_goals,
   |                    -------------- value moved here
68 |             upcoming_deadlines,
69 |             total_goals: filtered_goals.len() as i32,
   |                          ^^^^^^^^^^^^^^ value borrowed here after move
   |
help: consider cloning the value if the performance cost is acceptable
   |
67 |             goals: filtered_goals.clone(),
   |                                  ++++++++

warning: variable does not need to be mutable
  --> src\application\use_cases\goals\update_goal_use_case.rs:36:13
   |
36 |         let mut goals = self
   |             ----^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `pool`
  --> src\domain\services\bkt_service.rs:15:5
   |
15 |     pool: &Pool<Postgres>,
   |     ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: use of deprecated method `rand::Rng::gen_range`: Renamed to `random_range`
  --> src\modules\analytics\engagement\learning_patterns.rs:48:19
   |
48 |     let idx = rng.gen_range(0..learning_styles.len());
   |                   ^^^^^^^^^

For more information about this error, try `rustc --explain E0382`.
warning: `rust_analytics` (lib) generated 14 warnings
error: could not compile `rust_analytics` (lib) due to 1 previous error; 14 warnings emitted
